--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "w3-texto-fala-desktop",
+  "name": "quasar-socket-client",
   "version": "0.0.1",
-  "description": "Projeto de texto fala desktop usando Electron + Socket.io",
+  "description": "Projeto de chat",
   "productName": "W3 Texto Fala Desktop",
   "cordovaId": "org.cordova.quasar.app",
   "author": "eng.patrickmonteiro@gmail.com",
@@ -13,19 +13,13 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
-    "express": "^4.15.2",
     "quasar": "^1.0.0",
-    "socket.io": "^2.2.0",
     "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "devtron": "^1.4.0",
-    "electron": "^5.0.9",
-    "electron-debug": "^3.0.1",
-    "electron-devtools-installer": "^2.2.4",
     "electron-packager": "^13.1.1",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
